fixed overflow issue

--- a/src/components/Wrapper/style.css
+++ b/src/components/Wrapper/style.css
@@ -1,4 +1,4 @@
 .wrapperWidth {
-  width: 75vw;
-  height: 100vh;
+  width: 75%;
+  height: 100%;
 }
